Fixed warnings and firefox profile x-overflow, text changes

--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -43,6 +43,7 @@ ul {
 #profile-table-wrapper {
 	overflow-y: auto;
 	max-height: 100%;
+	overflow-x: hidden;
 }
 
 #profile-top {
